--- a/index.html
+++ b/index.html
@@ -1093,13 +1093,18 @@
     });
   </script>
   <script>
-    $(document).ready(function () { $(".hotels_list .owl-carousel").owlCarousel({ loop: !0, margin: 10, nav: !0, responsive: { 0: { items: 1 }, 600: { items: 3 }, 1000: { items: 4 } } }) });
+    $(document).ready(function () { $(".hotels_list .owl-carousel").owlCarousel({ loop: !0, margin: 10, nav: !0, responsive: { 
+      0: { items: 1 }, 
+      500: { items: 2 }, 
+      600: { items: 3 }, 1000: { items: 4 } } }) });
   </script>
   <script>
-    $(document).ready(function () { $(".oyo_list .owl-carousel").owlCarousel({ loop: !0, margin: 10, nav: !0, responsive: { 0: { items: 1 }, 600: { items: 3 }, 1000: { items: 3 } } }) });
+    $(document).ready(function () { $(".oyo_list .owl-carousel").owlCarousel({ loop: !0, margin: 10, nav: !0, responsive: { 0: { items: 1 },
+    500: { items: 2 },
+    600: { items: 1 }, 1000: { items: 3 } } }) });
   </script>
   <script>
-    $(document).ready(function () { $(".quick_hotel_search .owl-carousel").owlCarousel({ loop: !0, margin: 10, nav: !0, responsive: { 0: { items: 1 }, 600: { items: 3 }, 1000: { items: 6 } } }) });
+    $(document).ready(function () { $(".quick_hotel_search .owl-carousel").owlCarousel({ loop: !0, margin: 10, nav: !0, responsive: { 0: { items: 1 },  500: { items: 2 }, 600: { items: 3 }, 1000: { items: 6 } } }) });
   </script>
   <script>
     function getLocation() {
