account details page

--- a/index.html
+++ b/index.html
@@ -954,6 +954,31 @@
     </div>
   </footer>
 
+  <div class="mob_dis">
+    <div class="mob_menu_bottom">
+        <a href="/kumarsias/oyo/index.html" class="active">
+            <i class="fas fa-home"></i>
+            <span>Home</span>
+        </a>
+        <a href="javascript:;">
+            <i class="fas fa-heart"></i>
+            <span>Saved</span>
+        </a>
+        <a href="javascript:;">
+            <i class="fas fa-briefcase"></i>
+            <span>Bookings</span>
+        </a>
+        <a href="javascript:;">
+            <i class="fas fa-user-plus"></i>
+            <span>Invite &  Earn</span>
+        </a>
+        <a href="/account_details.html">
+            <i class="fas fa-user"></i>
+            <span>Account</span>
+        </a>
+    </div>
+</div>
+
 
   <div class="login_popup">
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
