--- a/account_details.html
+++ b/account_details.html
@@ -357,7 +357,7 @@
 
     <div class="mob_dis">
         <div class="mob_menu_bottom">
-            <a href="/kumarsias/oyo/index.html" class="active">
+            <a href="/oyo/index.html" class="active">
                 <i class="fas fa-home"></i>
                 <span>Home</span>
             </a>
@@ -373,7 +373,7 @@
                 <i class="fas fa-user-plus"></i>
                 <span>Invite &  Earn</span>
             </a>
-            <a href="/account_details.html">
+            <a href="/oyo/account_details.html">
                 <i class="fas fa-user"></i>
                 <span>Account</span>
             </a>
