--- a/reffer_earn.html
+++ b/reffer_earn.html
@@ -148,31 +148,77 @@
     </div>
 
 
-
-    <div class="reffer_container">
-        <div class="steps_container">
-            <div class="box_left">
-                <div class="image_wrapper">
-                    <img src="https://static.fabhotels.com/referral/web/referral_landing_banner_web_with_points_login_v2.jpg"
-                        alt="" />
+    <div class="custom_container">
+        <div class="reffer_container">
+            <div class="steps_container">
+                <div class="box_left">
+                    <div class="image_wrapper">
+                        <img src="https://static.fabhotels.com/referral/web/referral_landing_banner_web_with_points_login_v2.jpg"
+                            alt="" />
+                    </div>
+                    <div class="content_wrap">
+                        <p>Hi there!</p>
+                        <p>Having friends pays!</p>
+                        <p><strong>Refer & win Goa trip.</strong></p>
+                    </div>
                 </div>
-                <div class="content_wrap">
-                    <p>Hi there!</p>
-                    <p>Having friends pays!</p>
-                    <p><strong>Refer & win Goa trip.</strong></p>
+                <div class="box_right">
+                    <div class="steps_wrapper">
+                        <h2>Steps to follow</h2>
+                        <div class="step_list">
+                            <div class="image_list_container">
+                                <img src="https://static.fabhotels.com/referral/landing_step1_v1.png" alt="icon" />
+                            </div>
+                            <div class="content_hold">
+                                <p><strong>Earn ₹500, Give ₹700</strong></p>
+                                <p>Earn ₹500 for each friend you refer. Your friend earns ₹700</p>
+                            </div>
+                        </div>
+
+                        <div class="step_list">
+                            <div class="image_list_container">
+                                <img src="https://static.fabhotels.com/referral/landing_step2_v1.png" alt="icon" />
+                            </div>
+                            <div class="content_hold">
+                                <p><strong>Earn ₹500, Give ₹700</strong></p>
+                                <p>Earn ₹500 for each friend you refer. Your friend earns ₹700</p>
+                            </div>
+                        </div>
+
+                        <div class="step_list">
+                            <div class="image_list_container">
+                                <img src="https://static.fabhotels.com/referral/landing_step3_v2.png" alt="icon" />
+                            </div>
+                            <div class="content_hold">
+                                <p><strong>Earn ₹500, Give ₹700</strong></p>
+                                <p>Earn ₹500 for each friend you refer. Your friend earns ₹700</p>
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
             </div>
-            <div class="box_right">
-                <div class="steps_wrapper">
-                    <h2>Steps to follow</h2>
-                    <div>
-                        <img src="" alt="" />
-                        <div class="content_hold">
-                            <p><strong></strong></p>
-                            <p>Earn ₹500 for each friend you refer. Your friend earns ₹700</p>
-                        </div>
-                    </div>
+        </div>
+    </div>
 
+    <div class="custom_container">
+        <div class="referal_code_wrapper">
+            <div class="refreal_code">
+                <h2>Share your referral code and start earning</h2>
+                <p>Login now to reveal your referral code</p>
+                <form>
+                    <input type="text" value="" />
+                    <button type="submit" class="show_code_btn">Show Code</button>
+                </form>
+            </div>
+            <div class="social_wraper">
+                <h2>Invite via social media</h2>
+                <p>Invite your friends using any of the mediums given below</p>
+                <div class="icon_container">
+                    <a href="javascript:;"><i class="fab fa-facebook-messenger"></i></a>
+                    <a href="javascript:;"><i class="fab fa-facebook-f"></i></a>
+                    <a href="javascript:;"><i class="fas fa-envelope"></i></a>
+                    <a href="javascript:;"><i class="fab fa-twitter"></i></a>
                 </div>
             </div>
         </div>
